Create permanent notes on note-taking

--- a/20200802163450-food-recipes.org
+++ b/20200802163450-food-recipes.org
@@ -1,6 +1,6 @@
-#+TITLE: Food Recipes
-#+CREATED: [2020-08-02 Sun 16:34]
-#+MODIFIED: [2020-08-02 Sun 16:34]
+#+title: Food Recipes
+#+created: [2020-08-02 Sun 16:34]
+#+modified: [2021-02-21 Sun 22:35]
 
 * Stoofvlees (Flemish Stew)
 :PROPERTIES:
