--- a/references/20200802190944-code-the-hidden-languages-of-computer-hardware-and-software.org
+++ b/references/20200802190944-code-the-hidden-languages-of-computer-hardware-and-software.org
@@ -2,11 +2,10 @@
 #+roam_tags: book reading
 #+roam_key: https://www.goodreads.com/book/show/44882.Code
 #+created: [2020-08-02 Sun 19:09]
-#+modified: [2020-11-06 Fri 17:15]
+#+modified: [2021-02-22 Mon 02:43]
 
 * Metadata
-- Author: [[file:../20200802191035-charles-petzold.org][Charles Petzold]]
-- Source: https://www.goodreads.com/book/show/44882.Code
+- Author: [[roam:Charles Petzold]]
 - Reason: It's kind of a light introduction to Computer Science, while [[file:20200802191512-computer-systems-a-programmer-s-perspective.org][Computer Systems: A Programmer's Perspective]] is a lot more technical.
 * Notes
 * Highlights
