--- a/references/20200802191512-computer-systems-a-programmer-s-perspective.org
+++ b/references/20200802191512-computer-systems-a-programmer-s-perspective.org
@@ -2,11 +2,10 @@
 #+roam_tags: book unread
 #+roam_key: https://www.goodreads.com/book/show/829182.Computer_Systems
 #+created: [2020-08-02 Sun 19:15]
-#+modified: [2020-11-06 Fri 17:15]
+#+modified: [2021-02-22 Mon 02:44]
 
 * Metadata
-- Author: [[file:../20200802191554-randal-e-bryant.org][Randal E. Bryant]]
-- Source: https://www.goodreads.com/book/show/829182.Computer_Systems
-- Reason: [[file:../20200803000911-handmade-network.org][Handmade Network]] claims it to be an introductory, but complete material on Computer Science, which is something I lack
+- Author: [[roam:Randal E. Bryant]]
+- Reason: [[roam:Handmade Network]] claims it to be an introductory, but complete material on Computer Science, which is something I lack
 * Notes
 * Highlights
