--- a/20210221224553-workflow-for-taking-literature-notes.org
+++ b/20210221224553-workflow-for-taking-literature-notes.org
@@ -1,7 +1,11 @@
 #+title: Workflow for taking literature notes
 #+created: [2021-02-21 Sun 22:45]
-#+modified: [2021-02-23 Tue 19:22]
+#+modified: [2021-02-23 Tue 19:38]
 
+The core of gathering interesting literature depends solely on [[https://raindrop.io][raindrop.io]],
+which is basically bookmarks on steroids.
+
+#+name: Flowchart for taking notes from different sources
 #+begin_src plantuml :file .images/personal-workflow-literature-notes.png :exports results
 @startuml
 :Find interesting literature;
@@ -39,13 +43,11 @@ else (yes)
       watching it through;
     endif
   end split
-  :Refactor literate notes (possibly delete some);
+  #palegreen:Refactor literate notes (possibly delete some);
   kill
 endif
 @enduml
 #+end_src
-
-#+caption: Flowchart for taking notes from different sources
 #+RESULTS:
 [[file:.images/personal-workflow-literature-notes.png]]
 
