--- a/references/20201105025638-aws-certified-developer-associate.org
+++ b/references/20201105025638-aws-certified-developer-associate.org
@@ -1,8 +1,9 @@
 #+title: AWS Certified Developer - Associate 2020
-#+roam_tags: video unread
+#+roam_tags: video _0
+#+roam_key: cite:freecodecamp_aws_cda_2020
 #+roam_key: https://www.youtube.com/watch?v=RrKRN9zRBWs
 #+created: [2020-11-05 Thu 02:56]
-#+modified: [2021-02-22 Mon 02:45]
+#+modified: [2021-02-23 Tue 20:20]
 
 * Metadata
 - Author: [[roam:FreeCodeCamp]]
