--- a/references/biblio.bib
+++ b/references/biblio.bib
@@ -23,7 +23,7 @@
                   interfaces (Computer systems)},
 }
 
-@online{freecodecamp_aws_cda_2020,
+@misc{freecodecamp_aws_cda_2020,
   title =        {{AWS} {Certified} {Developer} - {Associate} 2020 ({PASS} {THE}
                   {EXAM}!)},
   url =          {https://www.youtube.com/watch?v=RrKRN9zRBWs},
@@ -45,7 +45,7 @@
   urldate =      {2021-02-23},
 }
 
-@misc{freecodecamp_dataviz_d3_2020,
+@Misc{freecodecamp_dataviz_d3_2020,
   title =        {Data {Visualization} with {D3}.js - {Full} {Tutorial}
                   {Course}},
   url =          {https://www.youtube.com/watch?v=_8V5o2UHG0E},
@@ -92,4 +92,12 @@
   author =       {Petzold, Charles},
   year =         2000,
   note =         {OCLC: 42290141},
+}
+
+@Misc{zaiste_doomcasts_2018,
+  title =        {{DoomCasts}: {Emacs} {Doom} {Screencasts}},
+  url =
+                  {https://www.youtube.com/watch?v=rCMh7srOqvw&list=PLhXZp00uXBk4np17N39WvB80zgxlZfVwj},
+  language =     {en},
+  urldate =      {2021-03-12},
 }
